fix overflow on desktop

--- a/src/sass/partials/_end.scss
+++ b/src/sass/partials/_end.scss
@@ -140,7 +140,9 @@
 }
 
 .is-last-slide {
-    .uit-slide-panel {
-        overflow-y: scroll;
+    @include mq($until: tablet) {
+        .uit-slide-panel {
+            overflow-y: scroll;
+        }
     }
 }
